Modernize Ipv6DecoderTest
Use JUnit5 with MockitoException. Use centralized setup for decoder and
use type-safe assertions.

Change-Id: I84053d36c76cee8e7ed9ebf3a80eb18fb19905b3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>